src/css/components/checkbox.css
@layer components {
  .checkbox {
    @apply elv-appearance-none
      elv-bg-neutral-0
      elv-border
      elv-border-medium
      elv-rounded-xs
      elv-transition-all
      elv-ease-in
      elv-cursor-pointer
      elv-relative
      elv-w-5
      elv-h-5;

    &:checked {
      @apply elv-bg-primary elv-border-0;
      background-image: url("data:image/svg+xml,%3Csvg width='10' height='9' viewBox='0 0 10 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 4.8L3.8 7.2L9 0' stroke='white' stroke-width='2' stroke-linecap='square'/%3E%3C/svg%3E");
      background-repeat: no-repeat;
      background-position: center;
      background-size: 65%;
    }

    &:hover:not(:checked):not(:disabled):not(:indeterminate) {
      @apply elv-bg-primary-20;
    }

    &:focus,
    &:focus-visible {
      @apply elv-outline elv-outline-3 elv-outline-offset-1 elv-outline-purple-40;
    }

    &:disabled {
      @apply elv-bg-neutral-10 elv-border-0 elv-cursor-default;

      &:hover { box-shadow: none; }
    }

    &:disabled:checked {
      @apply elv-bg-neutral-20;
    }

    &:indeterminate {
      @apply elv-bg-primary elv-border-0;
      background-image: url("data:image/svg+xml,%3Csvg width='10' height='3' viewBox='0 0 10 3' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 1.5H10' stroke='white' stroke-width='2.5' stroke-linecap='square'/%3E%3C/svg%3E");
      background-repeat: no-repeat;
      background-position: center;
      background-size: 60%;
    }
  }

  .checkbox--sm {
    @apply elv-w-4 elv-h-4;
  }

  .checkbox--lg {
    @apply elv-w-6 elv-h-6;
  }
}

